Fix issue select[multiple] overflowing container
Added `overflow: scroll` to `select[multiple].form-control` class to fix options overflowing container.

--- a/less/forms.less
+++ b/less/forms.less
@@ -344,6 +344,7 @@ input[type="checkbox"] {
   textarea.form-control,
   select[multiple].form-control {
     height: auto;
+    overflow: scroll;
   }
   .form-control-static {
     height: @input-height-small;
